--- a/index.html
+++ b/index.html
@@ -36,14 +36,61 @@
     </header>
     <main>
         <div class="main_container">
-            <div class="main_first_part">
-                <p class="title">Our Firm</p>
-                <p class="second_title">We are Agile. Constantly<br>Focused on Growth and<br>Being Better</p>
-                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <button class="header_button2"><a class="nav_link1" href="#">Read About Us</a></button>
+            <div class="main_one">
+                <div class="main_first_part">
+                    <p class="title">Our Firm</p>
+                    <p class="second_title">We are Agile. Constantly<br>Focused on Growth and<br>Being Better</p>
+                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                    <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                    <button class="header_button2"><a class="nav_link1" href="#">Read About Us</a></button>
+                </div>
+                <div class="main_second_part">
+                    <div class="left_side">
+                        <div class="block_one">
+                            <p class="block_number">18</p>
+                            <p class="block_description">Years Expirience</p>
+                        </div>
+                        <div class="block_two">
+                            <p class="block_number">9.5/10</p>
+                            <p class="block_description">Average rating</p>
+                        </div>
+                    </div>
+                    <div class="right_side">
+                        <div class="block_three">
+                            <p class="block_number">240+</p>
+                            <p class="block_description">Completed Projects</p>
+                        </div>
+                        <div class="block_four">
+                            <p class="block_number">150+</p>
+                            <p class="block_description">Served</p>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="main_second_part"></div>
+            <div class="main_two">
+                <p class="title">Our Services</p>
+                <p class="second_title">What We Offer</p>
+                <div class="cards_div">
+                    <div class="card_one">
+                        <img src="img/Icon-wallet.png" alt="wallet" class="card_pic">
+                        <p class="card_text">#1</p>
+                        <p class="card_title">Finincial Report</p>
+                        <p class="card_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                    </div>
+                    <div class="card_two">
+                        <img src="img/Icon-Backpack.png" alt="backpack" class="card_pic">
+                        <p class="card_text_two">#2</p>
+                        <p class="card_title_two">Manage Investments</p>
+                        <p class="card_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                    </div>
+                    <div class="card_three">
+                        <img src="img/Icon-Analytic.png" alt="analytic" class="card_pic">
+                        <p class="card_text_three">#3</p>
+                        <p class="card_title_two">Finincial Report</p>
+                        <p class="card_text_three">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
