--- a/index.html
+++ b/index.html
@@ -71,24 +71,63 @@
                 <p class="title">Our Services</p>
                 <p class="second_title">What We Offer</p>
                 <div class="cards_div">
-                    <div class="card_one">
+                    <div class="card_one shadow">
                         <img src="img/Icon-wallet.png" alt="wallet" class="card_pic">
                         <p class="card_text">#1</p>
                         <p class="card_title">Finincial Report</p>
                         <p class="card_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
-                    <div class="card_two">
+                    <div class="card_two shadow">
                         <img src="img/Icon-Backpack.png" alt="backpack" class="card_pic">
                         <p class="card_text_two">#2</p>
                         <p class="card_title_two">Manage Investments</p>
                         <p class="card_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
-                    <div class="card_three">
+                    <div class="card_three shadow">
                         <img src="img/Icon-Analytic.png" alt="analytic" class="card_pic">
                         <p class="card_text_three">#3</p>
                         <p class="card_title_two">Finincial Report</p>
                         <p class="card_text_three">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
+                </div>
+            </div>
+            <div class="main_three">
+                <p class="title_neg">Key Features</p>
+                <p class="second_title_neg">Manage Your<br>Finances From<br>one Place</p>
+                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                <button class="header_button1 main_button"><a class="nav_link1" href="#">Check All Fitures</a></button>
+                <img src="img/main pic.png" alt="main_pic" class="main_pic">
+                <img src="img/dotted.png" alt="dots" class="dots">
+            </div>
+            <div class="main_four">
+                <div class="four_left_side">
+                    <div class="combo_box">
+                        <a href="#" class="link_box">
+                            <div class="box_one boxes">
+                                <div class="tv_icon rect"><img src="img/Game.png" alt=""></div>
+                                <p class="box_title">Innovative<br>Solutions</p>
+                            </div>
+                        </a>
+                        <a href="#" class="link_box">
+                            <div class="box_two boxes">
+                                <div class="tv_icon rect"><img src="img/Call.png" alt=""></div>
+                                <p class="box_title">24/7<br>Support</p>
+                            </div>
+                        </a>
+                    </div>
+                    <a href="#" class="link_box_center">
+                        <div class="solo_box boxes">
+                            <div class="tv_icon rect"><img src="img/3 User.png" alt=""></div>
+                            <p class="box_title">Professional<br>Team</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="four_text_side">
+                    <p class="title four_title">Start Now</p>
+                    <p class="second_title four_second_title">Start Now & Make<br>Your Finances<br>Clear & Organized</p>
+                    <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
+                    <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                 </div>
             </div>
         </div>
