last: clear the css and html

--- a/index.html
+++ b/index.html
@@ -24,14 +24,12 @@
                 <a class="nav_link center" href="#">Our Services</a>
                 <a class="nav_link center" href="#">More</a>
             </nav>
-            <div class="header_end">
-                <button class="header_button"><a class="nav_link1" href="#">Contact Us</a></button>
-            </div>
+            <a class="button-blue button" href="#">Contact Us</a>
         </div>
         <div class="middle_header_container">
             <p class="H1">Financial<br>Solutions.</p>
             <p class="text">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Seperated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-            <button class="header_button1"><a class="nav_link1" href="#">Let's Talk</a></button>
+            <a class="button-darkblue  button" href="#">Let's Talk</a>
         </div>
     </header>
     <main>
@@ -96,7 +94,7 @@
                 <p class="second_title_neg">Manage Your<br>Finances From<br>one Place</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <button class="header_button1 main_button"><a class="nav_link1" href="#">Check All Fitures</a></button>
+                <a class="button-darkblue  button" href="#">Check All Fitures</a>
                 <img src="img/main pic.png" alt="main_pic" class="main_pic">
                 <img src="img/dotted.png" alt="dots" class="dots">
             </div>
@@ -130,11 +128,80 @@
                     <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                 </div>
             </div>
+            <div class="main_five">
+                <p class="title">Our Services</p>
+                <p class="second_title">Latest News</p>
+                <div class="news_div">
+                    <div class="news">
+                        <img src="img/new 1.png" alt="" class="news_pic">
+                        <div class="out_of_image">
+                            <p class="text date">January 01, 2021</p>
+                            <p class="card_title_two black">How to Start a<br>Successful in 2020</p>
+                            <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                            <button class="header_button2 news_button"><a class="nav_link1" href="#">Read More</a></button>
+                        </div>
+                    </div>
+                    <div class="news">
+                        <img src="img/new 2.png" alt="" class="news_pic">
+                        <div class="out_of_image">
+                            <p class="text date">January 01, 2021</p>
+                            <p class="card_title_two black">Grow Your Business with<br>Email Marketing</p>
+                            <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                            <button class="header_button2 news_button"><a class="nav_link1" href="#">Read More</a></button>
+                        </div>
+                    </div>
+                    <div class="news">
+                        <img src="img/new 3.png" alt="" class="news_pic">
+                        <div class="out_of_image">
+                            <p class="text date">January 01, 2021</p>
+                            <p class="card_title_two black">The 4 Pillars Every Online Business</p>
+                            <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+                            <button class="header_button2 news_button"><a class="nav_link1" href="#">Read More</a></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="main_six">
+                <p class="title cyan">Contact With Us</p>
+                <p class="second_title white">Interested?<br>Let's Start a Projects Together</p>
+                <button class="header_button button_contact"><a class="nav_link1" href="#">Contact Us</a></button>
+            </div>
         </div>
     </main>
     <footer>
         <div class="footer_container">
-
+            <div class="footer_first">
+                <div class="header_start flex_column">
+                    <div class="footer_logo">
+                        <img class="logo" src="img/footer_logo.png" alt="logo">
+                        <p class="logo_text black">WeFinance</p>
+                    </div>
+                    <p class="third_title">WeFinance is the highest rated expert<br>team in the world</p>
+                    <p class="third_title copyright">©2021 WeFinance</p>
+                </div>
+            </div>
+            <div class="footer_second">
+                <a href="#" class="nav_link1 black1">Home</a>
+                <a href="#" class="nav_link1 black1">Our Services</a>
+                <a href="#" class="nav_link1 black1">Our Team</a>
+                <a href="#" class="nav_link1 black1">About Us</a>
+                <a href="#" class="nav_link1 black1">Contact Us</a>
+                <a href="#" class="nav_link1 black1">Careers</a>
+                <a href="#" class="nav_link1 black1">How it Works</a>
+                <a href="#" class="nav_link1 black1">FAQ</a>
+            </div>
+            <div class="footer_third">
+                <div class="social_media">
+                    <img src="img/facebook.png" alt="" class="soc_media">
+                    <img src="img/instagram.png" alt="" class="soc_media">
+                    <img src="img/twitter.png" alt="" class="soc_media">
+                </div>
+                <div class="social_media help">
+                    <p class="third_title">Help</p>
+                    <p class="third_title">Term & Conditions</p>
+                    <p class="third_title">Privacy</p>
+                </div>
+            </div>
         </div>
     </footer>
 </body>
