--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
     <title>WeFinance</title>
 </head>
 <body>
-    <header>
-        <div class="top_header_container">
+    <header class="width_margin">
+        <div class="top_header_container between">
             <a href="#" class="to_top">
-                <div class="header_start">
+                <div class="header_start d-flex">
                     <img class="logo" src="img/logo.png" alt="logo">
                     <p class="logo_text">WeFinance</p>
                 </div>
             </a>
-            <nav class="nav">
+            <nav class="nav d-flex">
                 <a class="nav_link center" href="#">Home</a>
                 <a class="nav_link center" href="#">About Us</a>
                 <a class="nav_link center" href="#">How it Works</a>
@@ -26,39 +26,39 @@
             </nav>
             <a class="button-blue button" href="#">Contact Us</a>
         </div>
-        <div class="middle_header_container">
+        <div class="middle_header_container width_margin">
             <p class="H1">Financial<br>Solutions.</p>
             <p class="text">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Seperated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-            <a class="button-darkblue  button" href="#">Let's Talk</a>
+            <a class="button button-darkblue" href="#">Let's Talk</a>
         </div>
     </header>
-    <main>
+    <main class="width_margin">
         <div class="main_container">
-            <div class="main_one">
-                <div class="main_first_part">
+            <div class="main_one center">
+                <div class="main_first_part flex_column">
                     <p class="title">Our Firm</p>
                     <p class="second_title">We are Agile. Constantly<br>Focused on Growth and<br>Being Better</p>
                     <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                     <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                    <button class="header_button2"><a class="nav_link1" href="#">Read About Us</a></button>
+                    <a class="button button-blue" href="#">Read About Us</a>
                 </div>
-                <div class="main_second_part">
-                    <div class="left_side">
-                        <div class="block_one">
+                <div class="main_second_part d-flex">
+                    <div class="left_side flex_column">
+                        <div class="block_one blocks">
                             <p class="block_number">18</p>
                             <p class="block_description">Years Expirience</p>
                         </div>
-                        <div class="block_two">
+                        <div class="block_two blocks">
                             <p class="block_number">9.5/10</p>
                             <p class="block_description">Average rating</p>
                         </div>
                     </div>
-                    <div class="right_side">
-                        <div class="block_three">
+                    <div class="right_side flex_column">
+                        <div class="block_three blocks">
                             <p class="block_number">240+</p>
                             <p class="block_description">Completed Projects</p>
                         </div>
-                        <div class="block_four">
+                        <div class="block_four blocks">
                             <p class="block_number">150+</p>
                             <p class="block_description">Served</p>
                         </div>
@@ -68,20 +68,20 @@
             <div class="main_two">
                 <p class="title">Our Services</p>
                 <p class="second_title">What We Offer</p>
-                <div class="cards_div">
-                    <div class="card_one shadow">
+                <div class="cards_div center">
+                    <div class="card_one shadow flex_column center">
                         <img src="img/Icon-wallet.png" alt="wallet" class="card_pic">
                         <p class="card_text">#1</p>
                         <p class="card_title">Finincial Report</p>
                         <p class="card_text">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
-                    <div class="card_two shadow">
+                    <div class="card_two shadow flex_column center">
                         <img src="img/Icon-Backpack.png" alt="backpack" class="card_pic">
                         <p class="card_text_two">#2</p>
                         <p class="card_title_two">Manage Investments</p>
                         <p class="card_text_two">Far far away, behind the word mountains,<br>far from the countries Vokalia and<br>Consonantia.</p>
                     </div>
-                    <div class="card_three shadow">
+                    <div class="card_three shadow flex_column center">
                         <img src="img/Icon-Analytic.png" alt="analytic" class="card_pic">
                         <p class="card_text_three">#3</p>
                         <p class="card_title_two">Finincial Report</p>
@@ -89,34 +89,34 @@
                     </div>
                 </div>
             </div>
-            <div class="main_three">
+            <div class="main_three flex_column">
                 <p class="title_neg">Key Features</p>
                 <p class="second_title_neg">Manage Your<br>Finances From<br>one Place</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
                 <p class="third_title">Far far away, behind the word mountains, far from the countries<br>Vokalia and Consonantia, there live the blind texts. Separated they<br>live in Bookmarksgrove right at the coast of the Semantics</p>
-                <a class="button-darkblue  button" href="#">Check All Fitures</a>
+                <a class="button-darkblue button" href="#">Check All Fitures</a>
                 <img src="img/main pic.png" alt="main_pic" class="main_pic">
                 <img src="img/dotted.png" alt="dots" class="dots">
             </div>
-            <div class="main_four">
-                <div class="four_left_side">
-                    <div class="combo_box">
+            <div class="main_four center">
+                <div class="four_left_side d-flex">
+                    <div class="combo_box flex_column">
                         <a href="#" class="link_box">
-                            <div class="box_one boxes">
-                                <div class="tv_icon rect"><img src="img/Game.png" alt=""></div>
+                            <div class="box_one boxes flex_column">
+                                <div class="tv_icon rect center"><img src="img/Game.png" alt=""></div>
                                 <p class="box_title">Innovative<br>Solutions</p>
                             </div>
                         </a>
                         <a href="#" class="link_box">
-                            <div class="box_two boxes">
-                                <div class="tv_icon rect"><img src="img/Call.png" alt=""></div>
+                            <div class="box_two boxes flex_column">
+                                <div class="tv_icon rect center"><img src="img/Call.png" alt=""></div>
                                 <p class="box_title">24/7<br>Support</p>
                             </div>
                         </a>
                     </div>
-                    <a href="#" class="link_box_center">
-                        <div class="solo_box boxes">
-                            <div class="tv_icon rect"><img src="img/3 User.png" alt=""></div>
+                    <a href="#" class="link_box_center d-flex">
+                        <div class="solo_box boxes flex_column">
+                            <div class="tv_icon rect center"><img src="img/3 User.png" alt=""></div>
                             <p class="box_title">Professional<br>Team</p>
                         </div>
                     </a>
@@ -131,14 +131,14 @@
             <div class="main_five">
                 <p class="title">Our Services</p>
                 <p class="second_title">Latest News</p>
-                <div class="news_div">
+                <div class="news_div center">
                     <div class="news">
                         <img src="img/new 1.png" alt="" class="news_pic">
                         <div class="out_of_image">
                             <p class="text date">January 01, 2021</p>
                             <p class="card_title_two black">How to Start a<br>Successful in 2020</p>
                             <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-                            <button class="header_button2 news_button"><a class="nav_link1" href="#">Read More</a></button>
+                            <a class="button button-blue" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="news">
@@ -147,7 +147,7 @@
                             <p class="text date">January 01, 2021</p>
                             <p class="card_title_two black">Grow Your Business with<br>Email Marketing</p>
                             <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-                            <button class="header_button2 news_button"><a class="nav_link1" href="#">Read More</a></button>
+                            <a class="button button-blue" href="#">Read More</a>
                         </div>
                     </div>
                     <div class="news">
@@ -156,28 +156,27 @@
                             <p class="text date">January 01, 2021</p>
                             <p class="card_title_two black">The 4 Pillars Every Online Business</p>
                             <p class="third_title four_third_title">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
-                            <button class="header_button2 news_button"><a class="nav_link1" href="#">Read More</a></button>
+                            <a class="button button-blue" href="#">Read More</a>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="main_six">
+            <div class="main_six flex_column center">
                 <p class="title cyan">Contact With Us</p>
                 <p class="second_title white">Interested?<br>Let's Start a Projects Together</p>
-                <button class="header_button button_contact"><a class="nav_link1" href="#">Contact Us</a></button>
+                <a class="button button-blue" href="#">Contact Us</a>
             </div>
         </div>
     </main>
-    <footer>
-        <div class="footer_container">
+    <footer class="width_margin">
+        <div class="footer_container between">
             <div class="footer_first">
-                <div class="header_start flex_column">
-                    <div class="footer_logo">
+                <div class="d-flex flex_column">
+                    <div class="footer_logo center">
                         <img class="logo" src="img/footer_logo.png" alt="logo">
                         <p class="logo_text black">WeFinance</p>
                     </div>
-                    <p class="third_title">WeFinance is the highest rated expert<br>team in the world</p>
-                    <p class="third_title copyright">©2021 WeFinance</p>
+                    <p class="third_title margin-top">WeFinance is the highest rated expert<br>team in the world</p>
                 </div>
             </div>
             <div class="footer_second">
@@ -190,17 +189,22 @@
                 <a href="#" class="nav_link1 black1">How it Works</a>
                 <a href="#" class="nav_link1 black1">FAQ</a>
             </div>
-            <div class="footer_third">
-                <div class="social_media">
-                    <img src="img/facebook.png" alt="" class="soc_media">
-                    <img src="img/instagram.png" alt="" class="soc_media">
-                    <img src="img/twitter.png" alt="" class="soc_media">
+            <div class="footer_third flex_column between">
+                <div class="social_media d-flex">
+                    <img src="img/facebook.png" alt="facebook" class="soc_media">
+                    <img src="img/instagram.png" alt="insagram" class="soc_media">
+                    <img src="img/twitter.png" alt="twitter" class="soc_media">
                 </div>
-                <div class="social_media help">
-                    <p class="third_title">Help</p>
-                    <p class="third_title">Term & Conditions</p>
-                    <p class="third_title">Privacy</p>
-                </div>
+            </div>
+        </div>
+        <div class="footer_under between">
+            <div class="under_start">
+                <p class="third_title copyright">©2021 WeFinance</p>
+            </div>
+            <div class="social_media help d-flex">
+                <p class="third_title">Help</p>
+                <p class="third_title">Term & Conditions</p>
+                <p class="third_title">Privacy</p>
             </div>
         </div>
     </footer>
